# tr-ai-cing

./: .gitignore  CHANGELOG.md  LICENSE  PUBLISHING.md  PYPI_CONVERSION_SUMMARY.md  README.md  RELEASING.md  pyproject.toml  test_build.sh
.github/: copilot-instructions.md
.github/workflows/: publish-pypi.yml  test.yml
docs/: ARCHITECTURE_OPTIONS.md  ASSESSMENT.md  SUMMARY.md
examples/: README.md  architecture_option1_global_singleton.py  architecture_option2_context_variable.py  architecture_option3_dependency_injection.py  basic_example.py  error_handling_example.py  error_trace.jsonl  error_visualization.html  example_trace.jsonl  langgraph_example.py  langgraph_trace.jsonl  langgraph_visualization.html  minimal_context_example.py  trace_visualization.html
src/tracing/: __init__.py  tracer.py  visualizer.py
tests/: test_examples.py  test_tracer.py  test_visualizer.py
